style : 클래스와 메서드이름 수정
공통 피드백 <축약하지 않는다> 이행